Fixed allign on Safari browser

--- a/client/src/styles/scss/style.scss
+++ b/client/src/styles/scss/style.scss
@@ -970,6 +970,7 @@ section#contact {
 						transition: 0.5s;
 						outline: none;
 						width: 100px;
+						background-color: #efefef;
 
 						&.text {
 							display: inline-block;
@@ -1381,6 +1382,7 @@ section#contact {
 					}
 
 					select.contact-offer-input-select {
+						-webkit-appearance: none;
 						width: 100%;
 						height: 30px;
 						border: 2px solid #ff0000;
